# psn

./: .coverage  .gitignore  .mcp.json  CF.md  CLAUDE.md  CLOUDFLARE.md  FLOW.md  IDEAS.md  MIGRATION.md  PHYSICS.md  PLAN.md  README.md  REPORT.md  STRATEGY.md  TODO.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude-plugin/: .mcp.json  plugin.json  settings.json
.claude-plugin/agents/: architect.md  claude-admin.md  code-analyzer.md  coder-dx.md  coder-python.md  coder-ruby.md  coder-rust.md  coder-typescript.md  coder.md  core.md  devops.md  docs.md  draw.md  hostmaster.md  memory-curator.md
.claude-plugin/agents/claude/: admin.md
.claude-plugin/agents/code/: analyzer.md  dx.md  python.md  ruby.md  rust.md  typescript.md
.claude-plugin/agents/devops/: cf.md  gh.md  net.md  tengu.md
.claude-plugin/commands/: index-code.md  index-docs.md  memory-search.md  memory-store.md  session-restore.md
.claude-plugin/commands/cf/: add-host.sh  add-tunnel.md  add_host.md  add_host.sh  add_tunnel.md  del-host.sh  del-tunnel.md  del-tunnel.sh  del_host.md  del_tunnel.md  del_tunnel.sh  list-tunnels.md  list_tunnels.md  pages-deploy.md  pages-list.md  tunnel-info.md  tunnel_info.md  tunnel_info.sh  worker-info.sh  worker.md  worker.sh  worker_info.sh  workers-list.md  workers-list.sh  zone_info.md
.claude-plugin/commands/plugins/: install.md  list.md  list.sh  marketplace-update.md  update.md  update.sh
.claude-plugin/hooks/: hooks.json
.claude-plugin/skills/: cloudflare.md  indexer.md  plugin-management.md  session.md
.claude-plugin/skills/code/: common.md  python-cli.md  python-fastapi.md  python-gui.md  python-test.md  python-tooling.md  python-validate.md  python.md  ruby-gem.md  ruby-rails.md  ruby-test.md  ruby.md  (+11 more)
.claude/commands/: reinstall.md  reinstall.sh
.github/workflows/: test.yml
agents/: claude-admin.md  code-analyzer.md  coder.md  hostmaster.md  memory-curator.md
agents/coder/: dx.md  python.md  ruby.md  rust.md  typescript.md
commands/: index-code.md  index-docs.md  index-status.md  memory-recall.md  memory-search.md  memory-store.md  reinstall.md  session-restore.md  session-save.md
commands/cf/: add-host.md  add-tunnel.sh  add_host.md  add_tunnel.sh  del-host.md  del_host.sh  list-tunnels.sh  list-zones.md  list-zones.sh  list_zones.md  pages-deploy.sh  pages-destroy.md  pages-destroy.sh  pages-list.sh  pages_deploy.md  pages_deploy.sh  pages_destroy.md  pages_destroy.sh  pages_list.md  tunnel-info.sh  worker-info.md  worker.md  worker_info.md  workers_list.md  zone-info.md  zone-info.sh  zone_info.sh
commands/plugins/: install.md  list.md  marketplace-update.md  update.md
doc/: claude-plugins.md  mcp-quickstart.md  mcp-sdk-comparison.md  mcp-tools.md  piper-tts.md  plugin-dev.md  tts-voices.md
hooks/: hooks.json  notification.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  session_end.py  session_start.py  stop.py  subagent_stop.py  user_prompt_submit.py
prompts/: intro.md
servers/: docker_local.py  docker_remote.py  indexer.py  memory.py  ollama.py  postgres.py  tts.py
skills/: cloudflare.md  indexer.md  memory.md  pretty-output.md
skills/code/: common.md  dioxus-debug.md  dioxus-inspector.md  ruby-cli.md  rust-validate.md  rust.md  typescript-test.md  typescript.md
src/personality/: __init__.py  analyzer.py  cli.py  config.py  diagnostics.py  hooks.py  speak.py
tests/: __init__.py  test_cli.py  test_config.py  test_docs_indexer.py  test_embedder.py  test_hooks.py  test_index.py  test_integration.py  test_mcp_memory.py  test_mcp_prompts.py  test_mcp_resources.py  test_mcp_server.py  test_mcp_tools.py  test_memory_store.py  test_performance.py  test_portable_cart.py  test_speak.py
training/: BT7274.yml  FRIDAY.yml  GLADOS.yml  HAL.yml  JARVIS.yml  KITT.yml  LCARS.yml  README.md  SHODAN.yml  TACHIKOMA.yml  sp1022.yml
(+76 files in other folders)
