[project]
name = "personality"
version = "0.1.0"
description = "Infrastructure layer for Claude Code"
authors = [{ name = "chi", email = "chi@tengu.host" }]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "piper-tts>=1.4.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
psn = "personality.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/personality"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
