[project]
name = "psn"
dynamic = ["version"]
description = "Persona system for Claude Code - MCP server, memory, TTS, cartridges"
authors = [{ name = "chi", email = "chi@tengu.host" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
keywords = ["claude", "mcp", "persona", "tts", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "piper-tts>=1.4.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.28.1",
    "sentence-transformers>=5.2.3",
    "psycopg[binary]>=3.3.2",
    "pgvector>=0.4.2",
    "huggingface-hub>=1.4.1",
    "einops>=0.8.2",
]

[project.urls]
Homepage = "https://github.com/aladac/psn"
Repository = "https://github.com/aladac/psn"
Issues = "https://github.com/aladac/psn/issues"

[project.scripts]
psn = "personality.cli:app"

[tool.hatch.version]
path = "src/personality/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/personality"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "SIM102"]  # B008: typer.Option in defaults is standard, SIM102: nested ifs can be clearer

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
